Migrate to use of Gradle test fixtures rather than manual source set hacks and inter-test dependencies
Also rationalised/corrected most of the `api` exposures to represent which is actually needed in the APIs of individual components to avoid
flowing dependencies throughout the hierarchy unnecessarily.